src/css/jquery-usos.css
/* ... */
table.ua-checkbox-or-radio { border: 0; border-spacing: 0; }
table.ua-checkbox-or-radio > tbody > tr > td { padding: 0; vertical-align: top; text-align: left; }
table.ua-checkbox-or-radio > tbody > tr > td:first-child { padding: 3px 5px 3px 0; }
table.ua-checkbox-or-radio > tbody > tr > td:first-child > input { padding: 0; margin: 0 }
table.ua-checkbox-or-radio > tbody > tr > td:first-child > input:focus { outline: 1px dotted #888; }

table.ua-form { border-collapse: collapse; background: #fff; outline: 1px solid #D8D8D8; }
table.ua-form > tbody > tr > td { background: #ECECEC; padding: 5px 8px; vertical-align: middle; border: 1px solid #fff; }
table.ua-form > tbody > tr > td.ua-strong { background: #EEEEDD; }
table.ua-form > tbody > tr:nth-child(odd) > td { background: #D8D8D8; }
table.ua-form > tbody > tr:nth-child(odd) > td.ua-strong { background: #DEDECD; }
table.ua-form.ua-all-odd > tbody > tr:nth-child(even) > td { background: #D8D8D8; }
table.ua-form.ua-all-odd > tbody > tr:nth-child(even) > td.ua-strong { background: #DEDECD; }
table.ua-form.ua-all-even > tbody > tr:nth-child(odd) > td { background: #ECECEC; }
table.ua-form.ua-all-even > tbody > tr:nth-child(odd) > td.ua-strong { background: #EEEEDD; }
table.ua-form > tbody > tr.ua-header > td {
    /* Gradient */
    background: rgb(247,247,247) !important; /* Old browsers */
    background: -moz-linear-gradient(top,  rgba(247,247,247,1) 0%, rgba(255,255,255,1) 46%, rgba(247,247,247,1) 85%, rgba(230,230,230,1) 100%) !important; /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(247,247,247,1)), color-stop(46%,rgba(255,255,255,1)), color-stop(85%,rgba(247,247,247,1)), color-stop(100%,rgba(230,230,230,1))) !important; /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(255,255,255,1) 46%,rgba(247,247,247,1) 85%,rgba(230,230,230,1) 100%) !important; /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(255,255,255,1) 46%,rgba(247,247,247,1) 85%,rgba(230,230,230,1) 100%) !important; /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(255,255,255,1) 46%,rgba(247,247,247,1) 85%,rgba(230,230,230,1) 100%) !important; /* IE10+ */
    background: linear-gradient(to bottom,  rgba(247,247,247,1) 0%,rgba(255,255,255,1) 46%,rgba(247,247,247,1) 85%,rgba(230,230,230,1) 100%) !important; /* W3C */
    filter: unquote("progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#e6e6e6',GradientType=0 ) !important"); /* IE6-9 */
    /* Other */
    position: relative;
    padding: 6px 8px 7px 8px;
}

input.ua-form, select.ua-form, textarea.ua-form { border: 1px solid #9daccc; font-weight: normal; color: #222; font-size: 13px; margin: 0; }
input.ua-form:-moz-placeholder, select.ua-form:-moz-placeholder, textarea.ua-form:-moz-placeholder { color: #888; }
input.ua-form, textarea.ua-form { padding: 3px 3px 4px 4px /* HARDCODED f93ko */; }
select.ua-form { padding: 1px 1px 1px 0; }
select.ua-form.ua-null-selected { color: #999; }
select.ua-form .ua-null-value { color: #999; }
select.ua-form .ua-nonnull-value { color: #222; }
input.ua-form:disabled, select.ua-form:disabled, textarea.ua-form:disabled { border: 1px solid #aaa; font-weight: lighter; color: #999; background: #eee; }
textarea.ua-form { height: 40px; resize: vertical; }

.ua-form-textbox-icon { position: absolute; top: 1px; left: -2px; font-size: 10px; text-align: center; color: #fff; padding: 1px 0 0 0; width: 14px; height: 9px; background-repeat: none; }
.ua-form-textbox-icon.ua-lang-PL { background-image: url(images/textbox-pl.png); }
.ua-form-textbox-icon.ua-lang-EN { background-image: url(images/textbox-en.png); }

.text-dropdown { z-index: 1100; }

.ua-tip { display: inline-block; width: 16px; height: 16px; vertical-align: middle; position: relative; top: -1px; cursor: default; }
.ua-tip div { display: inline-block; width: 16px; height: 16px; background-image: url(images/tip-info.gif); background-repeat: no-repeat; }
.ua-tip:focus { background: #ffa; outline: 1px dotted #888; outline-offset: 3px; box-shadow: 0px 0px 0px 3px #ffa; }

hr.ua-hr { border: 0; width: 100%; background: transparent; color: transparent; border-bottom: 1px dotted #bbb; height: 1px; margin: 3px 0 4px 0; }

/* Tooltip: Base */

.ua-tooltip  .tooltipster-box {
    border-radius: 0px;
    font-size: 13px;
    line-height: 1.2;
}
.ua-tooltip .tooltipster-content  .tooltipster-box {
    font-size: 12px;
    line-height: 16px;
    padding: 7px 10px 8px 10px;
}

/* Tooltip: default subclass */

.ua-tooltip.ua-tooltip-default .tooltipster-box {
    border: 1px solid #999;
    background: #ffffe1;
    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
    color: #000;
}
.ua-tooltip.ua-tooltip-default .tooltipster-arrow-background {
    border-color: #ffffe1;
}
.ua-tooltip.ua-tooltip-default .tooltipster-arrow-border {
    border-color: #999;
}
.ua-tooltip.ua-tooltip-default .tooltipster-content {
    color: #000;
}
.ua-tooltip.ua-tooltip-default .tooltipster-content .tooltipster-content {
    font-size: 12px;
    line-height: 16px;
    padding: 7px 10px;
}
.ua-tooltip.ua-tooltip-default .tooltipster-content b .tooltipster-content {
    color: #444;
}
.ua-tooltip.ua-tooltip-default .tooltipster-content p { margin: 10px 0; }
.ua-tooltip.ua-tooltip-default .tooltipster-content p:first-child { margin-top: 0; }
.ua-tooltip.ua-tooltip-default .tooltipster-content p:last-child { margin-bottom: 0; }
.ua-tooltip.ua-tooltip-default .tooltipster-content ul { margin: 0; padding: 0 0 0 20px; }
.ua-tooltip.ua-tooltip-default .tooltipster-content ul li { margin: 5px 0; }
.ua-tooltip.ua-tooltip-default .tooltipster-content ul li:first-child { margin-top: 0; }
.ua-tooltip.ua-tooltip-default .tooltipster-content ul li:last-child { margin-bottom: 3px; }
/* ... */

